Update: prevent text from coming out of box

--- a/styles/style.css
+++ b/styles/style.css
@@ -988,8 +988,8 @@ header p {
     }
 
     .subcat:last-of-type p {
-        width: 83px;
-        left: -43px;
+        width: 75px;
+        left: -39px;
         top: 12px;
     }
 
